[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/structures/spawners/GSpawner.gd" type="Script" id=1]

[node name="GSpawner" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="Base" type="AnimatedSprite" parent="."]

[node name="Anim" type="AnimationPlayer" parent="."]

[node name="ActiveArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="Collision" type="CollisionShape2D" parent="ActiveArea"]

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="Collision" type="CollisionShape2D" parent="DamageArea"]

[node name="ObjectsArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="Collision" type="CollisionShape2D" parent="ObjectsArea"]

